# slingshot-microservice

./: .gitignore  Cargo.toml  README.md  publish-pypi.sh  pyproject.toml
examples/: py_simple.py  simple.rs
slingshot_microservice/: __init__.py  typing.py
src/: lib.rs
