[package]
name = "slingshot-microservice"
version = "0.1.0"
edition = "2021"
description = "Opinionated Rust framework for queue-driven microservices"
license = "MIT"

[dependencies]
futures-util = "0.3"
lapin = "2"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
anyhow = "1"
