[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "slingshot-microservice"
version = "0.1.0"
description = "Opinionated Rust framework for queue-driven microservices"
license = { text = "MIT" }
requires-python = ">=3.8"
readme = "README.md"

[tool.maturin]
# Build with Python bindings enabled.
features = ["python"]
# Place the native extension inside the Python package so imports resolve.
module-name = "slingshot_microservice._native"
# Include the pure-Python package (typing stubs, __init__.py) in the wheel.
python-packages = ["slingshot_microservice"]
